turn off disabling one-page scroll on small screens AND fix scroll

--- a/src/styles/core.styl
+++ b/src/styles/core.styl
@@ -1733,6 +1733,7 @@ body, html {
   -webkit-transition: opacity 400ms;
   -moz-transition: opacity 400ms;
   transition: opacity 400ms;
+  overflow hidden
 }
 
 body, .onepage-wrapper, html {
